--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,8 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.2-pre1
-yarn_mappings=1.18.2-pre1+build.6
-loader_version=0.13.2
-# Mod Properties
+
+mc_version=1.18.2-pre1
+yarn_version=1.18.2-pre1+build.6
+fabric_version=0.13.2
+fabric_api_version=0.47.4+1.18.2
 mod_version=1.0-SNAPSHOT
 maven_group=dev.dubhe
-archives_base_name=SkyLandMod
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.47.4+1.18.2
