--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx1G
 
-mc_version=1.18.2-pre1
-yarn_version=1.18.2-pre1+build.6
-fabric_version=0.13.2
-fabric_api_version=0.47.4+1.18.2
+mc_version=1.18.2
+yarn_version=1.18.2+build.1
+fabric_version=0.13.3
+fabric_api_version=0.47.8+1.18.2
 mod_version=1.0-SNAPSHOT
 maven_group=dev.dubhe
