--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,2 @@
-org.gradle.jvmargs=-Xmx1G
-
-mc_version=1.18.2
-yarn_version=1.18.2+build.1
-fabric_version=0.13.3
-mod_version=1.1.2
-maven_group=dev.dubhe
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
