--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,14 +10,23 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        branch: [ 1.19, 1.18.2 ]
     steps:
       - name: Check out
         uses: actions/checkout@v2
+      - name: Change branch
+        run: |
+          git fetch
+          git checkout ${{ matrix.branch }}
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'adopt'
+      - name: Set build number
+        run: sed -i "s/undefined/$GITHUB_RUN_NUMBER/g" gradle.properties
       - name: Give permission
         run: chmod +x gradlew
       - name: Build with Gradle
@@ -32,7 +41,7 @@ jobs:
         with:
           name: build-artifacts
           path: build/libs/
-      - name: Upload zip to Github
+      - name: Upload jar to Github release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
