--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,6 @@ org.gradle.jvmargs=-Xmx1G
 mc_version=1.19
 yarn_version=1.19+build.2
 fabric_version=0.14.7
-mod_version=1.1.3
+mod_version=1.1.4
 maven_group=dev.dubhe
+build_number=undefined
