--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,6 @@ org.gradle.jvmargs=-Xmx1G
 mc_version=1.18.2
 yarn_version=1.18.2+build.1
 fabric_version=0.13.3
-mod_version=1.1.2
+mod_version=1.1.4
 maven_group=dev.dubhe
+build_number=16
